Add Products API.
