# routes/api.php
@@ -3,6 +3,7 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\ClientsController;
+use App\Http\Controllers\ProductsController;
 
 /*
 |--------------------------------------------------------------------------
@@ -21,6 +22,9 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
 
 // CRUD completo para ClientsController (GET, POST, PUT, DELETE, etc.)
 Route::apiResource('clients', ClientsController::class);
+
+// CRUD completo para ProductsController (GET, POST, PUT, DELETE, etc.)
+Route::apiResource('products', ProductsController::class);
 
 // Documentação Swagger (frontend do Swagger UI)
 Route::get('/api/documentation', function () {
